compiler/testData/diagnostics/tests/generics/RecursiveUpperBoundWithTwoArguments.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
class D<A : D<A, <!UPPER_BOUND_VIOLATED!>String<!>>, B : D<A, B>>
